--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ h2 {
 	font-weight: bold;
 	padding: 0;
 	text-align: center;
+	text-transform: capitalize;
 	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 }
