--- a/css/style.css
+++ b/css/style.css
@@ -608,6 +608,7 @@ path#icon-become:focus  {
 	color: #FCB040;
 	font-size: 20px;
 	font-weight: bold;
+	line-height: 28px;
 }
 
 .subtitle ul {
@@ -619,6 +620,8 @@ path#icon-become:focus  {
 	color: white;
 	margin: 2% 4%;
 	text-indent: -20px;
+	line-height: 25px;
+	font-weight: 300;
 }
 
 .subtitle li:before {
@@ -696,7 +699,7 @@ path#icon-become:focus  {
 	font-weight: 300;
 	text-align: center;
 	margin: 0 auto;
-	padding: 7% 0;
+	padding: 8% 0;
 	visibility: hidden;
 }
 
@@ -711,6 +714,7 @@ path#icon-become:focus  {
 
 #overview p {
 	color: white;
+	font-weight: 300;
 }
 
 .area-title h2 {
@@ -761,7 +765,7 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 1.5%;
+	padding-top: 1%;
 	left: 18%;
 	visibility: hidden;
 }
@@ -784,7 +788,7 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 11.3%;
+	padding-top: 11%;
 	left: 20.5%;
 	visibility: hidden;
 }
@@ -807,8 +811,8 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 22%;
-	left: 23%;
+	padding-top: 21.3%;
+	left: 22%;
 	visibility: hidden;
 }
 
@@ -830,7 +834,7 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 1.5%;
+	padding-top: 1%;
 	left: 70.5%;
 	visibility: hidden;
 }
@@ -853,7 +857,7 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 11.3%;
+	padding-top: 11%;
 	left: 75%;
 	visibility: hidden;
 }
@@ -876,7 +880,7 @@ path#icon-become:focus  {
 	text-transform: none;
 	position: absolute;
 	z-index: 9000;
-	padding-top: 22%;
+	padding-top: 21.3%;
 	left: 70.5%;
 	visibility: hidden;
 }
